main: -fixed the overlay so that tect can be seen       -fixed spacing of image so it is not too close to the text       -switches to some color for aesthetic purpouses for future: make website available for small screens

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -20,7 +20,7 @@ body {
     /* ... other styles ... */
 }
 .logo {
-    width: 150px; /* Adjust the size as needed */
+    width: 200px; /* Adjust the size as needed */
     position: absolute;
     top: 1%; /* Adjust the percentage to move it closer to the top if needed */
     left: 1%; /* Adjust the percentage to move it closer to the left if needed */
@@ -118,7 +118,7 @@ body {
     position: fixed;
     right: -370px; 
     top: 0;
-    background: hsla(192, 96%, 44%, 0.816);
+    background: hsla(192, 87%, 36%, 0.816);
     z-index: 2;
     padding-top: 20px; 
     transition: 0.5s; 
@@ -187,7 +187,7 @@ nav ul li a{
 
 .title-text h3 {
     font-size: 65px;
-    color: #11b4ff;
+    color: #1593ce;
     margin-bottom: 20px; 
 }
 
@@ -236,7 +236,7 @@ nav ul li a{
     left: 15px; /* Position from the left equal to padding */
     border-radius: 7px;
     cursor: pointer;
-    background: linear-gradient(rgba(255, 255, 255, 0.5), #1ee5ffd0);
+    background: linear-gradient(rgba(151, 145, 145, 0.5), #00a4d6);
     box-sizing: border-box; /* Includes padding and border in the width and height */
     opacity: 0;
     transition: opacity 1s ease;
@@ -421,7 +421,7 @@ justify-content: left;
     align-items: center;
     text-align: left; 
     margin: auto; 
-    width: 90%; 
+    width: 100%; 
 }
 
 .features {
@@ -439,7 +439,7 @@ justify-content: left;
 
 .features-img img {
     width: 100%;
-    max-width: 600px;
+    max-width: 500px;
     height: auto;
     border-radius: 10px;
     display: block;
